load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "portable_util",
    hdrs = ["PortableUtil.hpp"],
    includes = ["."],
)

cc_test(
    name = "bazel_opencc_test",
    srcs = [
        "BazelOpenccTest.cpp",
        "PortableUtil.hpp",
    ],
    data = [
        "//data/config",
        "//data/dictionary:binary_dictionaries",
    ],
    defines = ["BAZEL"],
    deps = [
        "//:opencc",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "command_line_converter_test",
    srcs = [
        "CommandLineConvertTest.cpp",
        "PortableUtil.hpp",
    ],
    data = [
        "//data/config",
        "//data/dictionary:binary_dictionaries",
        "//data/dictionary:text_dictionaries",
        "//src/tools:command_line",
        "//test/testcases",
    ],
    defines = ["BAZEL"],
    deps = [
        "//src:common",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
        "@rapidjson",
    ],
)
