load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "portable_util_lib",
    hdrs = ["PortableUtil.hpp"],
    includes = ["."],
)

cc_test(
    name = "bazel_opencc_test",
    size = "small",
    srcs = [
        "BazelOpenccTest.cpp",
        "PortableUtil.hpp",
    ],
    data = [
        "//data/config",
        "//data/dictionary:binary_dictionaries",
    ],
    defines = ["BAZEL"],
    deps = [
        "//:opencc_lib",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "command_line_converter_test",
    size = "small",
    srcs = [
        "CommandLineConvertTest.cpp",
        "PortableUtil.hpp",
    ],
    data = [
        "//data/config",
        "//data/dictionary:binary_dictionaries",
        "//data/dictionary:text_dictionaries",
        "//src/tools:command_line",
        "//test/testcases",
    ] + select({
        "@platforms//os:windows": [],
        "//conditions:default": ["//data:opencc_resources_zip"],
    }),
    defines = ["BAZEL"] + select({
        "@platforms//os:windows": [],
        "//conditions:default": ["OPENCC_ENABLE_RESOURCE_ZIP_TEST"],
    }),
    deps = [
        "//src:common_lib",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
        "//deps/rapidjson-1.1.0:rapidjson",
    ],
)
