package(default_visibility = ["//visibility:public"])

[
    genrule(
        name = "reverse_" + txt,
        srcs = [txt + ".txt"],
        outs = [txt + "Rev.txt"],
        cmd = "$(location //data/scripts:reverse) " +
              "$(SRCS) $(OUTS)",
        tools = ["//data/scripts:reverse"],
    )
    for txt in [
        "TWVariants",
        "HKVariants",
        "JPShinjitaiCharacters",
    ]
]

[
    genrule(
      name = "tofu_" + txt,
      srcs = [txt + ".txt", "//data/scheme:AllowedSmpChars.txt"],
      outs = [txt + "Base.txt", txt + "Ext.txt"],
      cmd = "$(location //data/scripts:tofu) " +
            "$(SRCS) $(OUTS)",
      tools = ["//data/scripts:tofu"],
    )
    for txt in [
        "TSCharacters",
        "TSPhrases",
    ]
]

TEXT_DICTS = glob(["*.txt"]) + [
    "TSCharactersBase.txt",
    "TSCharactersExt.txt",
    "TSPhrasesBase.txt",
    "TSPhrasesExt.txt",
    "TWVariantsRev.txt",
    "HKVariantsRev.txt",
    "JPShinjitaiCharactersRev.txt",
]

[
    genrule(
        name = "generate_bin_" + txt[:-4],
        srcs = [txt],
        outs = [txt.replace(".txt", ".ocd2")],
        cmd = "$(location //src/tools:dict_converter) " +
              "--input $(location " + txt + ") " +
              "--output $(OUTS) " +
              "--from text " +
              "--to ocd2",
        tools = ["//src/tools:dict_converter"],
    )
    for txt in TEXT_DICTS
]

filegroup(
    name = "text_dictionaries",
    srcs = TEXT_DICTS,
)

filegroup(
    name = "binary_dictionaries",
    srcs = [txt.replace(".txt", ".ocd2") for txt in TEXT_DICTS],
)

[
    cc_test(
        name = "dictionary_" + txt[:-4] + "_test",
        size = "small",
        srcs = ["DictionaryTest.cpp"],
        local_defines = [
            "OPENCC_DICTIONARY_TEST_FILE=\\\"" + txt + "\\\"",
        ],
        data = [
            txt,
            txt.replace(".txt", ".ocd2"),
        ],
        deps = [
            "//src:lexicon_lib",
            "//src:marisa_dict_lib",
            "//src:utf8_util_lib",
            "@bazel_tools//tools/cpp/runfiles",
            "@googletest//:gtest_main",
        ],
    )
    for txt in TEXT_DICTS
]

test_suite(
    name = "dictionary_test",
    tests = [
        ":dictionary_" + txt[:-4] + "_test"
        for txt in TEXT_DICTS
    ] + ["//data/scripts:dictionary_test"],
)
