package(default_visibility = ["//visibility:public"])

[
    cc_test(
        name = "config_schema_validation_" + config[:-5],
        size = "small",
        srcs = ["//data/config:config_schema_validation_test_src"],
        local_defines = [
            "BAZEL",
            "OPENCC_CONFIG_SCHEMA_TEST_FILE=\\\"examples/config/" + config + "\\\"",
        ],
        data = [
            config,
            "//data/config:config_schema",
        ],
        deps = [
            "@bazel_tools//tools/cpp/runfiles",
            "@googletest//:gtest_main",
            "//deps/rapidjson-1.1.0:rapidjson",
        ],
    )
    for config in [
        "s2twp_quote_marks.json",
        "s2twp_taiwan_word.json",
    ]
]

test_suite(
    name = "examples_schema_validation_test",
    tests = [
        ":config_schema_validation_s2twp_quote_marks",
        ":config_schema_validation_s2twp_taiwan_word",
    ],
)
